--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ button:hover {
 .book-list {
   display: grid;
   width: 100vw;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
 
 .card {
